# splaz

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: download_lidar_by_address.py  read_lidar_info.py
src/splaz/: constants.py  downloader.py  entities.py  geocoder.py
src/splaz/data/: quadricula_folha_mdt_mds_2020.shp  quadricula_folha_mdt_mds_2020.shx
tests/: test_connection.py  test_downloader.py  test_end2end.py  test_entities.py  test_geocoder.py
