[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splaz"
version = "0.1.4"
authors = [
  { name="João Braga", email="joaovab@al.insper.edu.br" },
]
description = "API para facilitar o acesso a dados LiDAR do GeoSampa"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas>=1.1.3",
    "laspy>=2.7.0",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "pyogrio>=0.12.1",
    "geopy>=2.4.1",
    "tqdm>=4.67.3",    
    "pandas>=3.0.2",   
    "numpy>=2.4.4",
    "lazrs>=0.8.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "requests-mock>=1.12.1",
    "build",
    "twine",
]

[tool.setuptools.package-data]
"splaz.data" = ["*.shp", "*.shx", "*.dbf", "*.prj"]

[project.urls]
"Homepage" = "https://github.com/Joaovabbr/splaz"
"Bug Tracker" = "https://github.com/Joaovabbr/splaz/issues"